css img and map align fix

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -14,6 +14,13 @@
 		padding: 0;
 		background-color: black;
 	}
+	#img{
+		display: block;
+		margin: 0 auto;
+		width: 500px;
+		height: 500px;
+		z-index: 50;
+	}
 	.img{
 		display: block;
 		margin: 0 auto;
@@ -69,7 +76,6 @@
   width: auto;
   max-width: 100%;
   	.reload-small{
-float: left;
 		visibility: hidden;
 		text-size: 0px;
     border:none;
@@ -81,10 +87,7 @@ float: left;
     z-index: 100;
 	}
 }
-@media only(min-width: 0px) and (max-width: 500px) {
-container{
-	width:100%;
-}
+@media only(min-width: 0px) and (max-width: 400px) {
 .reload-small{
 
 		height: 35px;
@@ -111,4 +114,11 @@ container{
 	max-width:100%;
 	height: 35px;
 }
+	#map-canvas {
+		height: 250px;
+		width: 500px;
+		display: block;
+		margin: 0 auto;
+		max-width: 100%;
+	}
 }
